--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
-.App {
-  text-align: center;
+.container {
+  width: 100vw;
+  height: 100vh;
+  background-color: #e5e5e5;
+  color: #14213d;
+  display: grid;
+  grid-template-rows: 30% 35% 35%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  margin: 7px;
+  background-color: #e5e5e5;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card:hover {
+  background-color: #eaeaea;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card:active {
+  transform: scale(0.95);
+}
+
+.game-body {
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+
+.cover {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header {
+  box-sizing: content-box;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+
+.playerCard {
+  border: 1px solid #e5e5e5;
+  background-color: #e5e5e5;
+  margin: 0px 30px;
+  padding: 7px 17px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.15);
+}
+
+.playerCard-active {
+  border: 1px solid #80b918;
+  background-color: #eaeaea;
+  margin: 0px 30px;
+  padding: 7px 17px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.15);
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.reset-btn {
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  border-radius: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45px;
+  height: 45px;
+  background-color: #ef233c;
+  box-shadow: 0px 5px 15px rgba(66, 41, 41, 0.3);
+  margin-top: 10px;
+}
+
+.reset-btn:active {
+  transform: scale(0.95);
+}
+
+.msg {
+  margin: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.txt {
+  color: #fca311;
+  font-size: 1.4rem;
+  margin: 0 20px;
+}
+
+.winner {
+  margin: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
